--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,7 +78,7 @@
 						<li><a href="golf.jsp">Golf<span
 								class="fas fa-golf-ball "></span></a></li>
 					</ul></li>
-				<li class="dropdown"><a class="dropdown-toggle"
+				<li class="dropdown" id="admin-dropdown-list"><a class="dropdown-toggle"
 					data-toggle="dropdown" href="#admin">Admin <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a
@@ -88,12 +88,12 @@
 						<li><a href="#"
 							onclick="document.getElementById('suggestFav').style.display='block'">Suggest
 								Favourites</a></li>
-						<li class="dropdown-submenu"><a class="test" tabindex="-1"
+						<li class="dropdown-submenu" id="admin-get-reports"><a class="test" tabindex="-1"
 							href="#">Get Report <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#" onclick="openAdminReport()">Camping
 										Reports</a></li>
-								<li><a tabindex="-1" href="#"
+								<li id="admin-shelf-time-report"><a tabindex="-1" href="#"
 									onclick="document.getElementById('shelfTime').style.display='block'">Shelf
 										Time Report</a></li>
 								<li><a tabindex="-1" href="#"
@@ -607,26 +607,26 @@
 		<span
 			onclick="document.getElementById('shelfTime').style.display='none'"
 			class="close" title="Close Modal">&times;</span>
-		<form class="modal-content" action="">
+		<form class="modal-content" action="ShelfTimeReportServlet">
 			<div class="container">
 				<h1>Shelf Time Report</h1>
 				<hr>
 
-				<input type="text" placeholder="Enter the Retailer ID" required>
+				<input type="text" placeholder="Enter the Retailer ID" required id="shelf-time-report-retailer-id" name="retailer-id">
 				<div class="container">
-					<label><bold>Report Type : <select name="dropdown">
+					<label><bold>Report Type : <select name="report-type" id="shelf-time-report-report-type">
 							<option value="1" selected>Monthly Shelf Time Report</option>
 							<option value="2">Quarterly Shelf Time Report</option>
 							<option value="3">Yearly Shelf Time Report</option>
 						</select></label>
 				</div>
-				<label>Date Selection :<input type="date"></label> <br>
+				<label>Date Selection :<input type="date" name="date-selection" id="shelf-time-report-date-selection"></label> <br>
 
 				<div class="clearfix">
 					<button type="button"
 						onclick="document.getElementById('shelfTime').style.display='none'"
 						class="cancelbtn">Cancel</button>
-					<button type="submit" class="signupbtn">Submit</button>
+					<button type="submit" class="signupbtn" id="shelf-time-report-form-submit-button">Submit</button>
 				</div>
 			</div>
 		</form>
