added azhar code

--- a/src/main/webapp/CampingMenu.html
+++ b/src/main/webapp/CampingMenu.html
@@ -72,7 +72,7 @@
 
 
 
-						<button type="submit" class="btn btn-secondary">Submit</button>
+						<button type="submit" class="btn btn-secondary" id="Camping_Menu_Submit">Submit</button>
 					</form>
 				</div>
 			</div>
