--- a/src/main/webapp/SalesRepMenu.html
+++ b/src/main/webapp/SalesRepMenu.html
@@ -92,7 +92,7 @@
 								<p>Type "ALL" to view reports for all users</p>
 
 
-								<button type="submit" class="btn btn-secondary">Submit</button>
+								<button type="submit" class="btn btn-secondary" id="sales-rep-submit">Submit</button>
 
 
 							</form>
