--- a/src/main/webapp/setBonus.html
+++ b/src/main/webapp/setBonus.html
@@ -64,7 +64,7 @@
 								type="number" class="form-control" id="bonus">
 						</div>
 
-						<button type="submit" class="btn btn-secondary">Submit</button>
+						<button type="submit" class="btn btn-secondary" id="Sales_Rep_Set_Bonus">Submit</button>
 
 
 					</form>
