--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -696,16 +696,16 @@
 			<div class="container">
 				<h1>Add Item to Cart</h1>
 				<hr>
-				Enter The Product Id:<input type="text" name="productid"><br>
-				Enter The Customer Id:<input type="text" name="retid"><br>
+				Enter The Customer Id:<input type="text" name="retid"
+					id="addItem-userId"><br> Enter The Product Id:<input
+					type="text" name="productid" id="addItem-prodId"><br>
 				Enter the Quantity of the product: <input type="number"
-					name="quantity"><br>
-				<button type="submit" class="btn btn-default">Add to Cart</button>
+					name="quantity" id="addItem-quant"><br>
+				<div class="clearfix">
+					<button type="submit" class="signupbtn" id="add-item-to-cart-submit">Add To Cart</button>
+				</div>
+			</div>
 		</form>
-	</div>
-
-	</div>
-	</form>
 	</div>
 	<!--End of Add Item to Cart -->
 
